--- a/DD Cake Pastry/index.html
+++ b/DD Cake Pastry/index.html
@@ -281,8 +281,8 @@ Marking milestones with decadence, in every moment, immense.
               <div class="img">
                 <img src="images/client2.png" alt="" />
               </div>
-              <div class="Deepa">
-                <h3>Hardy Devid</h3>
+              <div class="clientDetailed">
+                <h3>Deepa</h3>
                 <p>Front End Developer</p>
               </div>
             </div>
