--- a/Resume/index.html
+++ b/Resume/index.html
@@ -1,163 +1,166 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
-<body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title></title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+  </head>
+  <body>
+    <div class="resume-main">
+      <div class="left-box">
+        <br /><br />
+        <div class="profile">
+          <img src="profile.png" />
+        </div>
+        <div class="content-box">
+          <h2>Profile Info</h2>
+          <hr class="hr1" />
+          <p class="p1">
+            Motivated software developer passionate about crafting scalable
+            solutions. Eager to broaden skills and contribute to innovative
+            projects in collaborative environments.
+          </p>
 
-<div class="resume-main">
-	<div class="left-box">
-		<br><br>
-		<div class="profile">
-			<img src="profile.png">
-		</div>
-		<div class="content-box">
-		<h2>Profile Info</h2>
-		<hr class="hr1">
-		<p class="p1"> Motivated software developer passionate about crafting scalable solutions. Eager to broaden skills and contribute to innovative projects in collaborative environments. </p>
+          <h3>Language:</h3>
+          <p class="p2">English</p>
+          <div id="progress"></div>
+          <p class="p2">Tamil</p>
+          <div id="progress1"></div>
+		  <br>
+          <h2>My Skills</h2>
+          <hr class="hr1" />
+          <br />
+          <div class="col-div-6"><p class="p2">HTML</p></div>
+          <div class="col-div-6">
+            <i class="fa fa-circle circle"></i>
+            <i class="fa fa-circle circle"></i>
+            <i class="fa fa-circle circle"></i>
+            <i class="fa fa-circle circle"></i>
+            <i class="fa fa-circle circle"></i>
+          </div>
+          <div class="clearfix"></div>
+          <div class="col-div-6"><p class="p2">CSS</p></div>
+          <div class="col-div-6">
+            <i class="fa fa-circle circle"></i>
+            <i class="fa fa-circle circle"></i>
+            <i class="fa fa-circle circle"></i>
+            <i class="fa fa-circle circle"></i>
+            <i class="fa fa-circle circle1"></i>
+          </div>
+          <div class="clearfix"></div>
+          <div class="col-div-6"><p class="p2">Python</p></div>
+          <div class="col-div-6">
+            <i class="fa fa-circle circle"></i>
+            <i class="fa fa-circle circle"></i>
+            <i class="fa fa-circle circle"></i>
+            <i class="fa fa-circle circle"></i>
+            <i class="fa fa-circle circle"></i>
+          </div>
+          <div class="clearfix"></div>
+          <div class="col-div-6"><p class="p2">JAVASCRIPT</p></div>
+          <div class="col-div-6">
+            <i class="fa fa-circle circle"></i>
+            <i class="fa fa-circle circle"></i>
+            <i class="fa fa-circle circle"></i>
+            <i class="fa fa-circle circle1"></i>
+            <i class="fa fa-circle circle1"></i>
+          </div>
 
-		<h3>Language:</h3>
-		<p class="p2">English</p>
-		<div id="progress"></div>
-		<p class="p2">Tamil</p>
-		<div id="progress1"></div>
+          <div class="clearfix"></div>
+          <br />
+          <h2>Technologies</h2>
+          <hr class="hr1" />
+          <br />
+          <div class="col-div-3 col3">
+            <i class="fa fa-futbol-o in"></i>
+            <span class="inp">Git & Github</span>
+          </div>
+          <div class="col-div-3 col3">
+            <i class="fa fa-futbol-o in"></i>
+            <span class="inp">Power BI</span>
+          </div>
+          <div class="col-div-3 col3">
+            <i class="fa fa-futbol-o in"></i>
+            <span class="inp">Jira</span>
+          </div>
+          <div class="col-div-3 col3">
+            <i class="fa fa-futbol-o in"></i>
+            <span class="inp">Microsoft Excel</span>
+          </div>
+        </div>
+      </div>
 
-		<br><br>
-		<h2>My Skills</h2>
-		<hr class="hr1">
-		<br>
-		<div class="col-div-6"><p class="p2">HTML</p></div>
-		<div class="col-div-6">
-			<i class="fa fa-circle circle"></i>
-			<i class="fa fa-circle circle"></i>
-			<i class="fa fa-circle circle"></i>
-			<i class="fa fa-circle circle"></i>
-			<i class="fa fa-circle circle"></i>
-		</div>
-			<div class="clearfix"></div>
-		<div class="col-div-6"><p class="p2">CSS</p></div>
-		<div class="col-div-6">
-			<i class="fa fa-circle circle"></i>
-			<i class="fa fa-circle circle"></i>
-			<i class="fa fa-circle circle"></i>
-			<i class="fa fa-circle circle"></i>
-			<i class="fa fa-circle circle1"></i>
-		</div>
-			<div class="clearfix"></div>
-		<div class="col-div-6"><p class="p2">Python</p></div>
-		<div class="col-div-6">
-			<i class="fa fa-circle circle"></i>
-			<i class="fa fa-circle circle"></i>
-			<i class="fa fa-circle circle"></i>
-			<i class="fa fa-circle circle"></i>
-			<i class="fa fa-circle circle"></i>
-		</div>
-			<div class="clearfix"></div>
-		<div class="col-div-6"><p class="p2">JAVASCRIPT</p></div>
-		<div class="col-div-6">
-			<i class="fa fa-circle circle"></i>
-			<i class="fa fa-circle circle"></i>
-			<i class="fa fa-circle circle"></i>
-			<i class="fa fa-circle circle1"></i>
-			<i class="fa fa-circle circle1"></i>
-		</div>
+      <div class="right-box">
+        <h1>
+          Deepa<br />
+          <span>Venkatesh</span>
+        </h1>
+        <p class="p3">Front End Developer</p>
 
-			<div class="clearfix"></div>
-			<br>
-			<h2>Technologies</h2>
-			<hr class="hr1">
-			<br>
-			<div class="col-div-3 col3">
-				<i class="fa fa-futbol-o in"></i>
-				<span class="inp">Git & Github</span>
-			</div>
-			<div class="col-div-3 col3">
-				<i class="fa fa-futbol-o in"></i>
-				<span class="inp">Power BI</span>
-			</div>
-			<div class="col-div-3 col3">
-				<i class="fa fa-futbol-o in"></i>
-				<span class="inp">Jira</span>
-			</div>
-			<div class="col-div-3 col3">
-				<i class="fa fa-futbol-o in"></i>
-				<span class="inp">Sports</span>
-			</div>
-		</div>
-	</div>
+        <br />
+        <h2 class="heading">Work Experience</h2>
+        <hr class="hr2" />
+        <br />
+        <div class="col-div-4">
+          <p class="p5">2021-2022</p>
+          <span class="span1">Freelancer</span>
+        </div>
+        <div class="col-div-8">
+          <p class="p5">Technical Trainer</p>
+          <span class="span1">
+            I've personally trained over 50,000 students in Python and C++
+            nationwide, fostering practical skills and exceeding client
+            expectations</span
+          >
+        </div>
+        <div class="clearfix"></div>
+        <br />
+        <div class="col-div-4">
+          <p class="p5">2023(Jan- Dec)</p>
+          <span class="span1">Appstix Technologies Private Limited</span>
+        </div>
+        <div class="col-div-8">
+          <p class="p5">Software Developer</p>
+          <span class="span1">
+            I utilize my expertise in Python, HTML, CSS, and JavaScript to craft
+            dynamic web applications with responsive design and effective issue
+            resolution, thriving in the fast-paced IT industry with a proactive
+            mindset, and proficiently managing projects using Jira for seamless
+            execution and timely delivery.</span
+          >
+        </div>
+        <div class="clearfix"></div>
+        <br />
 
-	<div class="right-box">
-		<h1>
-			Deepa<br>
-			<span>Venkatesh</span>
-		</h1>
-		<p class="p3">Front End Developer</p>
+        <h2 class="heading">My Education</h2>
+        <hr class="hr2" />
+        <br />
+        <div class="col-div-4">
+          <p class="p5">2017-2021</p>
+          <span class="span1">REC - Chennai</span>
+        </div>
+        <div class="col-div-8">
+          <p class="p5">B.Tech Chemical Engineering</p>
+          <span class="span1">8.05 CGPA</span>
+        </div>
+        <div class="clearfix"></div>
 
-		<br>	
-		<h2 class="heading">Work Experience</h2>
-		<hr class="hr2">
-		<br>
-		<div class="col-div-4">
-			<p class="p5">2015-2016</p>
-			<span class="span1">Company Name</span>
-		</div>
-		<div class="col-div-8">
-			<p class="p5">Web Designer</p>
-			<span class="span1">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</span>
-		</div>
-		<div class="clearfix"></div>
-		<br>
-		<div class="col-div-4">
-			<p class="p5">2015-2016</p>
-			<span class="span1">Company Name</span>
-		</div>
-		<div class="col-div-8">
-			<p class="p5">Web Designer</p>
-			<span class="span1">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</span>
-		</div>
-		<div class="clearfix"></div>
-		<br>
-		<div class="col-div-4">
-			<p class="p5">2015-2016</p>
-			<span class="span1">Company Name</span>
-		</div>
-		<div class="col-div-8">
-			<p class="p5">Web Designer</p>
-			<span class="span1">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</span>
-		</div>
-		<div class="clearfix"></div>
-
-		<br>	
-		<h2 class="heading">My Education</h2>
-		<hr class="hr2">
-		<br>
-		<div class="col-div-4">
-			<p class="p5">2015-2016</p>
-			<span class="span1">Company Name</span>
-		</div>
-		<div class="col-div-8">
-			<p class="p5">Web Designer</p>
-			<span class="span1">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</span>
-		</div>
-		<div class="clearfix"></div>
-		<br>
-		<div class="col-div-4">
-			<p class="p5">2015-2016</p>
-			<span class="span1">Company Name</span>
-		</div>
-		<div class="col-div-8">
-			<p class="p5">Web Designer</p>
-			<span class="span1">Lorem Ipsum is simply dummy text of the .</span>
-		</div>
-		<div class="clearfix"></div>
-	</div>
-	<div class="clearfix"></div>
-
-</div>
-
-</body>
+        <div class="col-div-4">
+          <p class="p5">2015-2017</p>
+          <span class="span1">GHSS</span>
+        </div>
+        <div class="col-div-8">
+          <p class="p5">Bio - Maths</p>
+          <span class="span1">88.33%</span>
+        </div>
+        <div class="clearfix"></div>
+      </div>
+      <div class="clearfix"></div>
+    </div>
+  </body>
 </html>
